--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
         </a>
     </div>
 
+    <svg id="demo" viewBox="0 0 800 800" width="1000" height="1000" xml:space="preserve">
+    <defs>
+      <clipPath id="theClipPath">
+      <rect class="start" width="800" height="800" x="0" y="0" />
+    </clipPath>
+    </defs>
+      <rect class="start" width="800" height="800" x="0" y="0" fill="steelblue" />
+      <g id="clipPathReveal" clip-path="url(#theClipPath)">
+        <image id="kid" xlink:href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/314556/juniorScience.jpg" x="100" y="100" width="600" height="600" />
+      </g>
+      <circle id="end" r="300" fill="white" cx="400" cy="400" />
+    </svg>
+
   <section id="contact">
     <div class="overlay">
       <div class="containers">
