--- a/index.html
+++ b/index.html
@@ -10,41 +10,42 @@
 <body>
 
   <div class="my_social">
-      <a href="https://www.linkedin.com/in/stewart-ilondanga-336b2743/" class="social">
-          <img src="https://i.imgsafe.org/85/857cb1a42e.png" alt="linkedin"></img>
-        </a>
-      <a href="https://stewilondanga.github.io/" class="social">
-          <img src="https://i.imgsafe.org/8d/8d745a5c82.png" alt="github"></img>
-        </a>
-      <a href="https://twitter.com/stew_ilondanga" class="social">
-          <img src="https://i.imgsafe.org/43/431dd07874.png" alt="twitter"></img>
-        </a>
-    </div>
+    <a href="https://www.linkedin.com/in/stewart-ilondanga-336b2743/" class="social">
+      <img src="https://i.imgsafe.org/85/857cb1a42e.png" alt="linkedin"></img>
+    </a>
+    <a href="https://stewilondanga.github.io/" class="social">
+      <img src="https://i.imgsafe.org/8d/8d745a5c82.png" alt="github"></img>
+    </a>
+    <a href="https://twitter.com/stew_ilondanga" class="social">
+      <img src="https://i.imgsafe.org/43/431dd07874.png" alt="twitter"></img>
+    </a>
+  </div>
 
-    <svg id="demo" viewBox="0 0 800 800" width="1000" height="1000" xml:space="preserve">
+  <svg id="demo" viewBox="0 0 800 800" width="1000" height="1000" xml:space="preserve">
     <defs>
       <clipPath id="theClipPath">
-      <rect class="start" width="800" height="800" x="0" y="0" />
-    </clipPath>
+        <rect class="start" width="800" height="800" x="0" y="0" />
+      </clipPath>
     </defs>
-      <rect class="start" width="800" height="800" x="0" y="0" fill="steelblue" />
-      <g id="clipPathReveal" clip-path="url(#theClipPath)">
-        <image id="kid" xlink:href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/314556/juniorScience.jpg" x="100" y="100" width="600" height="600" />
-      </g>
-      <circle id="end" r="300" fill="white" cx="400" cy="400" />
-    </svg>
+    <rect class="start" width="800" height="800" x="0" y="0" fill="steelblue" />
+    <g id="clipPathReveal" clip-path="url(#theClipPath)">
+      <image id="kid" xlink:href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/314556/juniorScience.jpg" x="100" y="100" width="600" height="600" />
+    </g>
+    <circle id="end" r="300" fill="white" cx="400" cy="400" />
+  </svg>
 
   <section id="contact">
     <div class="overlay">
       <div class="containers">
 
         <h1>
-<script>
-with(new Date)c=-new Date(y=getFullYear(),m=getMonth()).getDay(x=new Date(y,++m,0).getDate(b=-1))
-h='<table class="cal"><caption> <em>Stewart ilondanga</em> &#169 '+' '+y+'/'+m+'<tr>'+'SuMoTuWeThFrSa'.replace(/(..)/g,'<th>$1')
-while((b++>5?b=0:b)|c<x)h+=(b?'':'<tr>')+'<td>'+(++c<1|c>x?'-':c);document.write(h+'</table>')
-</script>
-</h1>
+          <script>
+            with(new Date) c = -new Date(y = getFullYear(), m = getMonth()).getDay(x = new Date(y, ++m, 0).getDate(b = -1))
+            h = '<table class="cal"><caption> <em>Stewart ilondanga</em> &#169 ' + ' ' + y + '/' + m + '<tr>' + 'SuMoTuWeThFrSa'.replace(/(..)/g, '<th>$1')
+            while ((b++ > 5 ? b = 0 : b) | c < x) h += (b ? '' : '<tr>') + '<td>' + (++c < 1 | c > x ? '-' : c);
+            document.write(h + '</table>')
+          </script>
+        </h1>
 
       </div>
     </div>
